--- a/package.json
+++ b/package.json
@@ -1,45 +1,55 @@
 {
-  "name": "ptlen",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.18",
-    "@types/ol": "^7.0.0",
-    "framer-motion": "^12.29.2",
-    "lucide-react": "^0.563.0",
-    "ol": "^10.7.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.2",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^4.7.0",
-    "autoprefixer": "^10.4.23",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
-    "ts-jest": "^29.4.6",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
-    "vite": "^5.4.21"
-  }
+	"name": "ptlen",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"build:rspack": "rspack build",
+		"doc": "typedoc",
+		"lint": "eslint .",
+		"preview": "vite preview",
+		"test": "jest"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.1.18",
+		"@types/ol": "^7.0.0",
+		"framer-motion": "^12.29.2",
+		"lucide-react": "^0.563.0",
+		"ol": "^10.7.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.39.1",
+		"@rspack/cli": "^1.7.4",
+		"@rspack/core": "^1.7.4",
+		"@tailwindcss/postcss": "^4.1.18",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.2",
+		"@trivago/prettier-plugin-sort-imports": "^6.0.2",
+		"@types/jest": "^30.0.0",
+		"@types/node": "^24.10.1",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.5",
+		"@vitejs/plugin-react": "^4.7.0",
+		"autoprefixer": "^10.4.23",
+		"eslint": "^9.39.1",
+		"eslint-plugin-jsdoc": "^62.5.0",
+		"eslint-plugin-react-hooks": "^7.0.1",
+		"eslint-plugin-react-refresh": "^0.4.24",
+		"globals": "^16.5.0",
+		"jest": "^30.2.0",
+		"jest-environment-jsdom": "^30.2.0",
+		"postcss": "^8.5.6",
+		"postcss-loader": "^8.2.0",
+		"prettier": "^3.8.1",
+		"tailwindcss": "^4.1.18",
+		"ts-jest": "^29.4.6",
+		"typedoc": "^0.28.16",
+		"typescript": "~5.9.3",
+		"typescript-eslint": "^8.46.4",
+		"vite": "^5.4.21"
+	}
 }
